# some-editor

./: Cargo.toml  LICENSE  README.md
src/: display.rs  highlight.rs  logger.rs  main.rs
src/application/: buffer.rs  mod.rs  modes.rs
src/view/: mod.rs  terminal.rs  traits.rs
