[package]
name = "some-editor"
version = "0.1.0"
authors = ["Jordan Enterkin <jordan.a.enterkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fern = "0.5"
log = "0.4"
ropey = "1.2.0"
termion = "1"
tokio = { version = "1.5.0", features = ["full", "sync"] }
xi-rope = "0.3.0"
